--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackAndTrigger"
         tools:replace="android:theme">
-        <activity android:name=".Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +23,8 @@
         <activity android:name=".register" />
         <activity android:name=".Authenticate" />
         <activity android:name=".Profession" />
+        <activity android:name=".Login" />
+        <activity android:name=".Dashboard" />
 
         <meta-data
             android:name="preloaded_fonts"
