--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -54,5 +55,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.4.0'
 
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
 apply plugin: 'com.google.gms.google-services'
