--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.trackandtrigger">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackAndTrigger"
         tools:replace="android:theme">
-        <activity android:name=".To_Do_Category"></activity>
+        <activity android:name=".Share"/>
+        <activity android:name=".To_Do_Category" />
         <activity android:name=".To_Do" />
         <activity android:name=".To_Do_List" />
         <activity android:name=".item" />
@@ -32,6 +35,9 @@
         <activity android:name=".Login" />
         <activity android:name=".Dashboard" />
         <activity android:name=".PhoneNumber" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <meta-data
             android:name="preloaded_fonts"
