--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'com.airbnb.android:lottie:3.4.0'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
