--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".Login" />
         <activity android:name=".Dashboard" />
         <activity android:name=".PhoneNumber" />
+        <receiver android:name=".RemainderBroadcast"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
