--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackAndTrigger"
-        tools:replace="android:theme">
+        tools:replace="android:icon,android:theme">
         <activity android:name=".Share"/>
         <activity android:name=".To_Do_Category" />
         <activity android:name=".To_Do" />
